--- a/popup/popup.css
+++ b/popup/popup.css
@@ -3,10 +3,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 5px;
+  gap: 15px;
   margin: 20px;
   padding: 5px;
-  width: 250px;
+  width: 350px;
+  position: relative;
 }
 
 .logo {
@@ -16,20 +17,62 @@
   margin-bottom: 6px;
 }
 
-#url-input, #filename-input {
-  border-radius: 5px;
-  padding: 8px;
-  border: 1px solid lightskyblue;
+#url-input,
+#filename-input {
+  padding: 10px;
+  font-size: 14px;
+  font-weight: bold;
+  color: #000;
+  background-color: #fff;
+  border: 4px solid #000;
+  position: relative;
+  overflow: hidden;
+  border-radius: 0;
+  outline: none;
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  box-shadow: 5px 5px 0 #000, 10px 10px 0 #4a90e2;
+}
+
+.filename-label {
+  width: fit-content;
+  font-size: 14px;
+  font-weight: bold;
+  color: #fff;
+  background-color: #000;
+  padding: 5px 10px;
+  transform: rotate(-1deg);
+  z-index: 1;
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.url-label {
+  width: fit-content;
+  font-size: 14px;
+  font-weight: bold;
+  color: #fff;
+  background-color: #000;
+  padding: 5px 10px;
+  transform: rotate(-1deg);
+  z-index: 1;
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
 #download-btn {
-  border-radius: 5px;
-  padding: 8px 16px;
-  background-color: lightskyblue;
-  border: none;
+  width: 100%;
+  display: inline-block;
+  background-color: white;
+  font-size: 15px;
+  font-family: inherit;
+  text-align: center;
+  font-size: 13px;
+  box-shadow: 5px 5px 0 #000, 10px 10px 0 #4a90e2;
+  border: 4px solid #000;
+  padding: 1em;
+  transition: all 0.4s;
+  cursor: pointer;
 
   &:hover {
-    background-color: skyblue;
+    background-color: lightgray;
     cursor: pointer;
   }
 }
